# lte/cloud/go/services/lte/obsidian/models/enodeb_configuration_swaggergen.go
@@ -41,6 +41,9 @@ type EnodebConfiguration struct {
 	// Minimum: > 0
 	Pci uint32 `json:"pci,omitempty"`
 
+	// radio configuration
+	RadioConfiguration *RadioConfiguration `json:"radioConfiguration,omitempty"`
+
 	// special subframe pattern
 	// Maximum: 9
 	SpecialSubframePattern uint32 `json:"special_subframe_pattern,omitempty"`
@@ -76,6 +79,10 @@ func (m *EnodebConfiguration) Validate(formats strfmt.Registry) error {
 	}
 
 	if err := m.validatePci(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRadioConfiguration(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -212,6 +219,24 @@ func (m *EnodebConfiguration) validatePci(formats strfmt.Registry) error {
 
 	if err := validate.MaximumInt("pci", "body", int64(m.Pci), 503, false); err != nil {
 		return err
+	}
+
+	return nil
+}
+
+func (m *EnodebConfiguration) validateRadioConfiguration(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.RadioConfiguration) { // not required
+		return nil
+	}
+
+	if m.RadioConfiguration != nil {
+		if err := m.RadioConfiguration.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("radioConfiguration")
+			}
+			return err
+		}
 	}
 
 	return nil
